# whisper-input-mac

./: ARCHITECTURE.md  LICENSE  PROJECT_CHECKLIST.md  README.md  current-task.md  pyproject.toml  verify_hotkey_integration.py
src/whisper_input_mac/: Info.plist  app.py  audio_capture_service.py  global_hotkey.py  icon_utils.py  orchestrator.py  permissions.py  preferences.py  preferences_window.py  press_hold_detector.py  status_icon_controller.py  text_injector.py  whisper-input.entitlements
src/whisper_input_mac/accessibility/: __init__.py  focus_observer.py
src/whisper_input_mac/tools/: debug_focus.py  debug_injection.py  prefetch_models.py
src/whisper_input_mac/transcription/: __init__.py  lightning_whisper_mlx.py
tests/: test_audio_capture_service.py  test_global_hotkey.py  test_icon_utils.py  test_permissions.py  test_preferences.py  test_press_hold_detector.py  test_status_icon_controller.py  test_transcription.py
tests/accessibility/: test_focus_observer.py
tests/text_injection/: __init__.py  test_text_injector.py
